--- a/_main.tex
+++ b/_main.tex
@@ -84,8 +84,16 @@
 
 Hello!
 
-\#Introduction
+\hypertarget{primo---adaptive-discovery}{%
+\chapter{Primo - Adaptive Discovery}\label{primo---adaptive-discovery}}
 
-If I remember Markdown right, two line spacings make a new paragraph.
+\hypertarget{documentation-of-features-customization}{%
+\section{\texorpdfstring{\emph{Documentation of Features \& Customization}}{Documentation of Features \& Customization}}\label{documentation-of-features-customization}}
+
+The CSCU library consortium uses Ex Libris Alma/Primo as their discovery system. The user interface can be customized to support and improve the user experience.
+The following is a documentation of the customizations made by our colleagues across the CSCU libraries. It is follow-up of two projects undertaken by the Primo/Discovery Expert Team:
+- a multi-campus UX study and resulting recommendations
+- a survey \& inventory of changes made by each institution
+The purpose of this documentation is to share knowledge and experience, so that anyone can customize their Primo instance for better discovery.
 
 \end{document}
