--- a/_main.tex
+++ b/_main.tex
@@ -92,8 +92,15 @@ Hello!
 
 The CSCU library consortium uses Ex Libris Alma/Primo as their discovery system. The user interface can be customized to support and improve the user experience.
 The following is a documentation of the customizations made by our colleagues across the CSCU libraries. It is follow-up of two projects undertaken by the Primo/Discovery Expert Team:
-- a multi-campus UX study and resulting recommendations
-- a survey \& inventory of changes made by each institution
+
+\begin{itemize}
+\tightlist
+\item
+  a multi-campus UX study and resulting recommendations
+\item
+  a survey \& inventory of changes made by each institution
+\end{itemize}
+
 The purpose of this documentation is to share knowledge and experience, so that anyone can customize their Primo instance for better discovery.
 
 \end{document}
