deploy: 76b03c762bab644a97c153ae941837de8de0217f

--- a/_main.tex
+++ b/_main.tex
@@ -103,4 +103,42 @@ The following is a documentation of the customizations made by our colleagues ac
 
 The purpose of this documentation is to share knowledge and experience, so that anyone can customize their Primo instance for better discovery.
 
+\hypertarget{search-filter-facets}{%
+\chapter{Search Filter Facets}\label{search-filter-facets}}
+
+\hypertarget{change-facet-heading-tweak-my-results}{%
+\section{Change Facet Heading ``Tweak my results''}\label{change-facet-heading-tweak-my-results}}
+
+How-to:
+See also {[}link to Ex Libris Knowledgebase{]}
+
+\hypertarget{change-which-facet-categorie-show}{%
+\section{Change Which Facet Categorie Show}\label{change-which-facet-categorie-show}}
+
+Intro paragraph with example {[}e.g.~``\ldots{}''{]}
+See also {[}link to Ex Libris Knowledgebase{]}
+
+\hypertarget{change-label-of-facet-category}{%
+\section{Change Label of Facet Category}\label{change-label-of-facet-category}}
+
+Intro paragraph with example {[}e.g.~``\ldots{}''{]}
+See also {[}link to Ex Libris Knowledgebase{]}
+
+\hypertarget{change-individual-facet-labels}{%
+\section{Change Individual Facet Labels}\label{change-individual-facet-labels}}
+
+Intro paragraph with example {[}e.g.~``audiovisual''{]}
+See also {[}link to Ex Libris Knowledgebase{]}
+
+\hypertarget{course-reserves}{%
+\section{Course Reserves}\label{course-reserves}}
+
+Intro
+
+\hypertarget{collection-discovery}{%
+\section{Collection Discovery}\label{collection-discovery}}
+
+\hypertarget{resource-recommender}{%
+\section{Resource Recommender}\label{resource-recommender}}
+
 \end{document}
